# ZincShell

./: .gitignore  Cargo.toml  flake.nix
src/: app.rs  background.rs  lib.rs  logging.rs  main.rs  top.rs  utilities.rs  wallpaper.rs  web_server.rs
themes/: asciinema.json
