[package]
name = "zinc_shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
gpui = { git = "https://github.com/zed-industries/zed", rev = "938b8ab7"}
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit", "x11", "wayland", "runtime_shaders"], rev = "938b8ab7" }
gpui-component = { git = "https://github.com/zincneo/gpui-component", branch="main" }
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
dirs = "6.0.0"
chrono = "0.4.43"

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
debug = false
